# bookworm_rec

./: .gitignore  4_data.ipynb  4_data.py  LICENSE  MANIFEST.in  README.md  app.py  app2.py  env.yml  preprocessed_isbns.py  requirements.txt  search.py  search_wrapper.py  setup.py  styles.css  userstory.md
.github/workflows/: build_test.yml
bookworm/: __init__.py  app.py  file_structure.md  preprocessed_isbns.py  pyproject.toml  search.py  search_wrapper.py
bookworm/.streamlit/: config.toml
bookworm/data/: README.md  genre.csv  test_data.csv  test_data4.csv  test_data_w_embeddings.csv
bookworm/data/test_data/: distances_test.csv  distances_test.npy  indices_test.csv  indices_test.npy  test_data2.csv  test_data3.csv  test_data_w_embeddings.csv  test_genre.csv
bookworm/local/: InspectData.py  LocalTestScript.py  LocalTestScript2.py  create_test_genre.py  prep_text.py
bookworm/tests/: test_app.py  test_preprocessed_isbns.py  test_search.py  test_search_wrapper.py
data/: distances_updated.npy  indices_updated.npy
docs/: Bookworm_Presentation.pptx  Bookworm_Presentation.pptx:Zone.Identifier  Component_Specifications.html  Component_Specifications.md  Final_Pres_Bookworm.pptx  Final_Really_Presentation.pptx  Functional_Specifications.md  Milestones.md  TechReview.pptx  project_tree.md  usecase.md
examples/: README.md
rec_system_1/: app.py  distances.npy  indices.npy  search.py  test.py
scripts/: Embeddings.py  README.md  Semantic Scores.py  __init__.py  embeddings_test_data.py  semantic_scores.py
scripts/create_test_data/: create_test_genre.py  (+2 more)
