# In order to build your package, you need to use a "build system".
# There are a number of supported build systems, but here we'll use
# the "setuptools" package.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# The "project" section contains metadata about the project, like
# the authors and version. Note that the `dynamic` setting here
# is very important so that the build system packages up your
# dependencies!
[project]
name = "bookworm_rec"
version = "0.0.1"
authors = [
  { name="Jacob Peterson" },
  { name="Lawrie Brunswick" },
  { name="Sue Boyd" },
  { name="Priyam Gupta"}
]
description = "A book recommendation tool"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

# In conjunction with the "dynamic" option above in the "project"
# section, this tells the build system to add any dependencies
# specified in requirements.txt.
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Where can someone find out more about your project?
[project.urls]
Homepage = "https://github.com/jacobp24/bookworm_rec/"
Issues = "https://github.com/jacobp24/bookworm_rec/issues"